# Sir-Standsalot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  portainer-stack.yml  pyproject.toml  standup_bot.py
.github/workflows/: docker-publish.yml
src/commands/: __init__.py  prefix_commands.py  slash_commands.py
src/core/: bot.py  email_service.py  tasks.py  tracker.py  utils.py
wiki/: Commands.md  Configuration.md  Docker.md  Setup.md
