[tool.poetry]
name = "discord-attendance-bot"
version = "0.1.0"
description = "Sir Standsalot - A noble Discord bot that vigilantly tracks daily standup attendance"
authors = ["Talha Jubair Siam <talha@askturing.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
"discord.py" = "^2.6.3"
pytz = "^2025.2"
python-dotenv = "^1.1.1"
pynacl = "^1.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
